# test-pypi-deploy

./: .gitattributes  .readthedocs.yaml  pyproject.toml
.github/workflows/: draft-release.yml  pypi-release.yml
docs/: requirements.txt
docs/source/: concepts.md  conf.py  index.rst  tutorials.md
test_deploy/: test.py
